// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SandboxPopUp should match snapshot with default 1`] = `
<div>
  <Component
    message="This is a sandbox environment, with anonymised test data and isolated from production"
    onCloseToast={[Function]}
    variant="info"
    visible={false}
  />
</div>
`;

exports[`SandboxPopUp should match snapshot with passed props 1`] = `
<div>
  <Component
    message="mess"
    onCloseToast={[Function]}
    variant="info"
    visible={false}
  />
</div>
`;
